Changes the table to fit in a scrollable div, reverting the fix for auto width cells which caused words to break at weird places

--- a/packages/obonode/obojobo-chunks-table/viewer-component.scss
+++ b/packages/obonode/obojobo-chunks-table/viewer-component.scss
@@ -1,9 +1,12 @@
 @import '~styles/includes';
 
 .obojobo-draft--chunks--table.viewer {
+	> .container {
+		overflow: auto;
+	}
+
 	.view.is-display-type-auto {
 		table-layout: auto;
-		word-break: break-word;
 	}
 
 	.view {
